# fjs

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
fjs/: README.md  pubspec.yaml
fjs/android/: build.gradle  settings.gradle
fjs/example/: README.md  pubspec.yaml
fjs/example/android/: build.gradle
fjs/example/lib/: driver_main.dart  es6_features.dart  isolate.dart  main.dart  multiple_example.dart
fjs/example/linux/: CMakeLists.txt  my_application.cc
fjs/example/test/: widget_test.dart
fjs/example/test_driver/: app.dart  app_test.dart  dart_to_js_test.dart  isolate_test.dart  settimeout_test.dart
fjs/ios/: flutter_js.podspec
fjs/ios/Classes/: FlutterJsPlugin.m  SwiftFlutterJsPlugin.swift
fjs/lib/: error.dart  module.dart  promise.dart  types.dart  vm.dart
fjs/lib/javascriptcore/: jscore_bindings.dart  vm.dart
fjs/lib/quickjs/: qjs_ffi.dart  vm.dart
fjs/macos/: flutter_js.podspec
fjs/test/: console_test.dart  json-generator-dot-com-128-rows.json  json-generator-dot-com-2048-rows.json  json-generator-dot-com-256-rows.json  json-generator-dot-com-512-rows.json  json-generator-dot-com-768-rows.json  module_loader_test.dart  module_path_test.dart  settimeout_test.dart  test_utils.dart
fjs/test/javascriptcore/: concurrent_test.dart  console_test.dart  constructor_test.dart  convert_test.dart  dart2js_test.dart  dispose_test.dart  dylib_test.dart  error_test.dart  gc_before_promise_issue_test.dart  js2dart_test.dart  js_feature_test.dart  low_level_api_test.dart  memory_pressure_test.dart  module_loader_test.dart  promise_test.dart  settimeout_test.dart  transfer_test.dart
fjs/test/modules/: minus.js  plus.js
fjs/test/quickjs/: concurrent_test.dart  console_test.dart  constructor_test.dart  convert_test.dart  dart2js_test.dart  dispose_test.dart  dylib_test.dart  error_test.dart  js2dart_test.dart  js_feature_test.dart  (+7 more)
fjs_linux/: pubspec.yaml
fjs_linux/linux/: CMakeLists.txt  flutter_js_plugin.cc
fjs_macos/: pubspec.yaml
fjs_macos/macos/: flutter_js_macos.podspec
fjs_platform_interface/: pubspec.yaml
fjs_windows/: pubspec.yaml
fjs_windows/windows/: CMakeLists.txt  flutter_js_plugin.cpp
flutter_js/: .gitignore  README.md  pubspec.yaml
flutter_js/android/: build.gradle
flutter_js/example/: README.md  pubspec.yaml
flutter_js/ios/: flutter_js.podspec
flutter_js/lib/: context.dart  error.dart  flutter_js.dart  lifetime.dart  module.dart  types.dart  vm.dart
flutter_js/macos/: flutter_js.podspec
flutter_js/test/: console_test.dart  javascriptcore_test.dart  module_loader_test.dart  quickjs_vm_test.dart  settimeout_test.dart
flutter_js_linux/: pubspec.yaml
flutter_js_linux/linux/: CMakeLists.txt  flutter_js_plugin.cc
flutter_js_macos/: pubspec.yaml
flutter_js_macos/macos/: flutter_js_macos.podspec
flutter_js_windows/: pubspec.yaml
flutter_js_windows/windows/: CMakeLists.txt  flutter_js_plugin.cpp
modules/fjs_module_boilerplate/: pubspec.yaml
modules/fjs_module_http/: pubspec.yaml
modules/flutter_js_module_boilerplate/: pubspec.yaml
modules/flutter_js_module_http/: pubspec.yaml
native/: .gitignore  README.md
native/android/: .gitignore  CMakeLists.txt  README.md  build.gradle
native/android/gradle/wrapper/: gradle-wrapper.properties
native/android/src/main/: AndroidManifest.xml
native/src/: interface.cpp  quickjs.def
native/windows/: .gitignore  CMakeLists.txt  README.md  build.bat  prebuild.bat
native/windows/test/: CMakeLists.txt  test.cpp
(+122 files in other folders)
